RESOLVED FIXED140992
Fix MediaPlayerEngine leaks
https://bugs.webkit.org/show_bug.cgi?id=140992
Summary Fix MediaPlayerEngine leaks
Darin Adler
Reported 2015-01-28 00:49:49 PST
Fix MediaPlayerEngine leaks
Attachments
Patch (13.88 KB, patch)
2015-01-28 00:51 PST, Darin Adler
jer.noble: review+
Darin Adler
Comment 1 2015-01-28 00:51:38 PST
WebKit Commit Bot
Comment 2 2015-01-28 00:58:10 PST
Attachment 245523 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 3 2015-01-28 01:00:08 PST
Comment on attachment 245523 [details] Patch R=me, but CQ will fail with the "no new tests" line in the ChangeLog.
Darin Adler
Comment 4 2015-01-28 01:22:01 PST
Note You need to log in before you can comment on or make changes to this bug.